custom-manifests/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: self-signed
    cert-manager.io/common-name: alertmanager.localhost
    cert-manager.io/revision-history-limit: "5"
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: "8192"
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alertmanager.localhost
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager-main
                port:
                  name: web
